2007-01-08  Stipe Tolj  <stolj at kannel.org>
    * */*: update LICENSE preamble block to 2007.

2007-01-08  Stipe Tolj  <stolj at kannel.org>
    * gwlib/charset.c: removing Alex's debugging octstr_dump() calls from 
      charset_utf8_to_gsm(). NLC.
    
2007-01-08  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_fake.c: enhancing the faked DLR support. Now we pass the ACK
      of the MT first to abstraction layer, in order to obtain SMSC success DLR,
      then care about the final DLR indicating success.

2007-01-08  Stipe Tolj  <stolj at kannel.org>
	* gw/dlr.h: fixing typo for DLR_SMSC_FAIL macro, obviously this is 0x16.

2007-01-07  Stipe Tolj  <stolj at kannel.org>
    * gwlib/charset.[ch]: re-add prototypes and function charset_latin1_to_gsm()
      and charset_gsm_to_latin1() for the sake of backward compatibility of 
      external boxes using Kannel core libs. This should be reviewed and merged
      into single array for latin1 and utf-8 transcoding values.

2007-01-07  Stipe Tolj  <stolj at kannel.org>
    * gw/dlr.h: adding macro DLR_IS_NOT_FINAL() for non-final DLR status mask.

2006-12-19 Alexander Malysh <amalysh at kannel.org>
    * gw/sms.c: fixed wrong length calculation for concatenated
      messages. UDH send always as octets.

2006-12-19 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.[ch]: fixed warning: inlining failed in call to
      'octstr_convert_printable': function body not available.

2006-12-19  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_emi.c: fix charset re-encoding for OP/53 DLR text.
      Thanks to Vincent for providing a patch.
      [Msg-Id: <2ab401c71669$8afc34b0$9600a8c0@vince>]

2006-12-14 Andreas Fink <andreas at fink.org>
    * gwlib/list.c: fix mutex locking for gwlist_sort. It was using the wrong
      mutex giving deadlocks if you did gwlist_lock(), gwlist_sort(), gwlist_unlock()
      now also unlocking the right mutex if the list length was zero.
